--- a/styles/reset.css
+++ b/styles/reset.css
@@ -6,8 +6,8 @@
 }
 
 body {
-    background-color: #66b7ed;
-    color: #0b255e;
+    background-color: #4a91d3;
+    color: #001f3f;
 }
 
 /* Reset and base styles  */
